--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,14 @@
-torch>=1.9.0
-tqdm
+torch==2.0.0
+tqdm==4.65.0
 numpy==1.17.2
-Pillow
-tensorboardX>=2.5
+Pillow==9.5.0
+tensorboardX==2.6
 attrs>=21.4.0
 hydra-core==1.2.0
 omegaconf==2.2.1
-gym
+gym==0.26.2
 opencv-python
-mujoco
-dm_control
-imageio
-scikit-video
+mujoco==2.3.3
+dm_control==1.0.11
+imageio==2.27.0
+scikit-video==1.1.11
